[package]
name = "lolcate-rs"
version = "0.3.0"
authors = ["Nicolas Girard <girard.nicolas@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
dirs = "1.0"
ignore = "0.4"
lazy_static = "1.3"
lz4 = "1"
regex = "1"
serde_derive = "1.0"
serde = "1.0"
termcolor = "1"
toml = "0.4"
walkdir = "2"

[[bin]]
path = "src/main.rs"
name = "lolcate"
