[package]
name = "lolcate-rs"
version = "0.4.0"
description = "A comically fast way of indexing and querying your filesystem. Replaces locate / mlocate / updatedb."
documentation = "https://github.com/ngirard/lolcate-rs/blob/master/README.md"
readme = "README.md"
repository = "https://github.com/ngirard/lolcate-rs"
keywords = ["filesystem-indexer", "search", "regex"]
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0"
license-file = "LICENSE"
maintenance = { status = "actively-developed" }
authors = ["Nicolas Girard <girard.nicolas@gmail.com>"]
edition = "2018"
exclude = [
    "/misc/**",
    "/mk_test_tree.sh",
    "notes.txt",
    "/test/**"
]

[dependencies]
clap = "2"
dirs = "1.0"
expanduser = "1.2"
ignore = "0.4"
lazy_static = "1.3"
lz4 = "1"
regex = "1"
serde_derive = "1.0"
serde = "1.0"
termcolor = "1"
toml = "0.4"
walkdir = "2"

[[bin]]
path = "src/main.rs"
name = "lolcate"
